README.md header improved v2k bugfix

--- a/.vscode/icons/svg/commits.html
+++ b/.vscode/icons/svg/commits.html
@@ -8,43 +8,22 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    #
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
       rel="stylesheet"
     />
-    <style>
-      * {
-        color: white;
-      }
-      h1 {
-        font-family: 'Oswald', sans-serif;
-      }
-      section {
-        background: url('img/jpeg/background/vintage-wooden-wall--4k.jpg')
-          center center / cover no-repeat content-box;
-        border-radius: 1rem;
-      }
-      .arm {
-        color: red;
-      }
-      .section__hero {
-      }
-      .section__technologies {
-      }
-    </style>
+
     <section class="section__hero" id="hero" align="center" valign="middle">
-      <br />
       <br />
       <h1 class="hero__heading">Project Marcel Teugels</h1>
       <br />
-      <div class="hero__content">
-        <p>
+      <div class="hero__content" align="center" valign="middle">
+        <p class="hero__quote">
           <i>"One machine can do the work of 50 ordinary men.</i>
           <i>No machine can do the work of one extraordinary men"</i>
         </p>
-        <p align="center">
+        <p class="hero__git" align="center" valign="middle">
           <a
             target="_blank"
             rel="noopener noreferrer"
@@ -81,7 +60,7 @@
             <img alt="network" src="./.vscode/icons/svg/network.svg" />
           </a>
         </p>
-        <p align="center">
+        <p class="hero__contributors" align="center" valign="middle">
           <a
             href="https://github.com/EmielTeugels"
             target="_blank"
@@ -94,7 +73,7 @@
             href="https://www.facebook.com/emiel.teugels/"
             target="_blank"
             rel="noopener noreferrer"
-            align="top"
+            align="middle"
             valign="middle"
             ><img
               src="img\png\leden\emiel-circle.png"
@@ -147,27 +126,27 @@
               alt="a picture of raf vergauwen"
           /></a>
         </p>
-        <p>
-          <a href="https://www.instagram.com/marcelteugels/"
-            >Experience true craftsmanship »</a
-          >
+        <p class="hero__quote--instragram align="center" valign="middle">
+          <a href="https://www.instagram.com/marcelteugels/">
+						Experience true craftsmanship »
+					</a>
         </p>
-        <a href="https://github.com/RafVergauwen/project-marsteel">
-          <br />
-          <br />
-          <br />
-          <br />
-          <img
-            src="img/svg/marcel-teugels-logo__improved.svg"
-            alt="marcel teugels logo"
-            width="45%"
-          />
-          <br />
-          <br />
-        </a>
+				<br />
+				<br />
+				<p class="hero__logo align="center" valign="middle">
+					<a href="https://github.com/RafVergauwen/project-marsteel">
+						<img
+							src="img/svg/marcel-teugels-logo__improved.svg"
+							alt="marcel teugels logo"
+							width="45%"
+						/>
+					</a>
+        </p>
+				<br />
+				<br />
       </div>
-      <div class="technologies__content">
-        <p align="center">
+      <div class="technologies__content" align="center" valign="middle">
+        <p class="technologies__languages"align="center" valign="middle">
           <a href="https://vuejs.org" target="_blank" rel="noopener noreferrer">
             <img src="https://img.icons8.com/color/48/000000/css3.png" />
           </a>
@@ -192,7 +171,7 @@
             <img src="https://img.icons8.com/color/48/000000/mongodb.png" />
           </a>
         </p>
-        <p align="center">
+        <p class="technologies__info" align="center" valign="middle">
           <a
             target="_blank"
             rel="noopener noreferrer"
@@ -232,7 +211,7 @@
             />
           </a>
         </p>
-        <p align="center">
+        <p class="technologies__gag" align="center" valign="middle">
           <a
             target="_blank"
             rel="noopener noreferrer"
@@ -264,7 +243,7 @@
             />
           </a>
         </p>
-        <p align="center">
+        <p class="technologies__badges"  align="center" valign="middle">
           <a target="_blank" rel="noopener noreferrer" href="">
             <img
               alt="Adobe"
@@ -356,6 +335,27 @@
     #### _Formulier voor custom items_ - [ ] Naam - [ ] Email - [ ] Adress - [ ]
     Categorien - [ ] Tekstbeschrijving - [ ] Vragen aan klant - [ ] Wip ####
     _Footer_ - [ ] Sociale media - [ ] Contactgegevens?!
+
+    <style>
+      * {
+        color: white;
+      }
+      h1 {
+        font-family: 'Oswald', sans-serif;
+      }
+      section {
+        background: url('https://images.unsplash.com/photo-1533035350251-aa8b8e208d95?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80')
+          center center / cover no-repeat content-box;
+        border-radius: 1rem;
+      }
+      .arm {
+        color: red;
+      }
+      .section__hero {
+      }
+      .section__technologies {
+      }
+    </style>
 
     <script src="scripts/javascript/main.js"></script>
   </body>
